--- a/ms.tex
+++ b/ms.tex
@@ -252,7 +252,7 @@ We also find that when the core size is larger, the constraints on the density p
 \includegraphics[trim= 2 5 0 0, clip, width=0.48\textwidth]{figures/f_04.eps}
 \centering
 \end{center}
-\caption{ Parameter covariance matrices for two simulations (after marginalization over nuisance parameters). Top panel shows that when the core size is small the mass of the SMBH is not measured and only an upper limit can be placed on it. The bottom panel, shows that for larger core sizes, the mass of the SMBH could be measured by high significance. 
+\caption{ Parameter covariance matrices for two simulations (after marginalization over nuisance parameters). Black curves show that when the core size is small, the mass of the SMBH is not measured with high precision and only an upper limit can be placed on it. The bottom panel, shows that for larger core sizes, the mass of the SMBH could be measured with high significance. 
 \label{fig:4}}
 \end{figure}
 
