--- a/ms.tex
+++ b/ms.tex
@@ -293,7 +293,7 @@ This number is much larger than what is calculated in \citet{Li:12}, since they 
 
 
 
-\section{Conclusion}
+\section{Conclusions}
 We have examined the prospects of detecting central, demagnified images of strongly lensed molecular lines with ALMA. We found that there is a non-negligible space of realistic and plausible parameters that result in a high significance detection of the central images. We showed that such deep observations can either allow a measurement of the mass of the central SMBH and the stellar core size, or place strong limits on them.
 We also studied the possibility of detecting binary SMBHs and found that only under very rare conditions central images may allow detection of both SMBHs. 
 
