--- a/ms.tex
+++ b/ms.tex
@@ -300,7 +300,7 @@ We also studied the possibility of detecting binary SMBHs and found that only un
 
 
 \acknowledgements{
-\red{Acknowledge NSF?}}
+\red{Acknowledge NSF?, Risa's group meeting}}
 
 \bibliographystyle{apj}
 \bibliography{references}
