--- a/ms.tex
+++ b/ms.tex
@@ -300,7 +300,11 @@ We also studied the possibility of detecting binary SMBHs and found that only un
 
 
 \acknowledgements{
-\red{Acknowledge NSF?, Risa's group meeting}}
+We thank Risa Wechsler and Matt Becker for interesting discussions.
+\red{YH acknowledges support from the NSF ...}
+The work of PJM was supported in part by the U.S.
+Department of Energy under contract number DE-AC02-76SF00515.
+}
 
 \bibliographystyle{apj}
 \bibliography{references}
